# nbestimate

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  anaconda-project.yml  environment.yml  estimate.ipynb  estimate.src.ipynb  ipynb_counts.csv  kapsel.yml  pyproject.toml  requirements.txt  update.py
.github/workflows/: cronjob.yml
